# mitgcm_inputs

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yml
launcers/all_statics/: generate_mer_statics.sh
launcers/rbcs/: launcher.sh  profile.inc
legacy_code/: Kext_for_GoT_iNEST_V2.m  diagnose_bottom_fluxes_GoT_bathy_V2.m  make_bottom_fluxes_GoT_bathy_V2.m  make_bottom_fluxes_GoT_bathy_V2_flat.m  make_surface_deposition_GoT_iNEST.m
legacy_code/m_code/: make_bottom_fluxes_GoT_bathy_V2.m  make_masks_GoT.m
legacy_code/python_translation/: diagnose_bottom_fluxes_GoT_bathy_V2.py  make_bottom_fluxes_GoT_bathy_V2.py  make_bottom_fluxes_GoT_bathy_V2_flat.py  make_masks_GoT.py  parameters.py  test_scripts.py
src/mitgcm_inputs/: Kext_for_GoT_iNEST_V2.py  __main__.py  diagnose_bottom_fluxes_GoT_bathy_V2.py  make_bottom_fluxes_GoT_bathy_V2.py  make_bottom_fluxes_GoT_bathy_V2_flat.py  make_masks_GoT.py  make_surface_deposition_GoT_iNEST.py  pathes_to_data.py
src/mitgcm_inputs/bottom_fluxes/: __init__.py  bottom_fluxes.py
src/mitgcm_inputs/cosmetic_mask/: __init__.py
src/mitgcm_inputs/exf_albedo/: __init__.py
src/mitgcm_inputs/k_extinction/: __init__.py  k_extinction.py
src/mitgcm_inputs/k_extinction/data/: kExt_climatology.nc
src/mitgcm_inputs/ob_indices/: __init__.py  ob_indices.py
src/mitgcm_inputs/rbcs/: Allegato_1_Capitolato_Tecnico_B32_B35_modificato.xlsx  Allegato_1_Capitolato_Tecnico_B32_B35_scarichi.xlsx  __init__.py  fiumi_json_gen.py  launcher.sh  listaFIUMI_MER.xlsx  rbcs_gen.py  repo_upload.sh  scarichi_json_gen.py
src/mitgcm_inputs/surface_deposition/: __init__.py  surface_deposition.py
src/mitgcm_inputs/tools/: read_mesh_mask.py  save_dataset.py  tar_utils.py
src/mitgcm_inputs/vertical_fluxes/: __init__.py
src/tides/: set_bc_grid.py  set_bc_tides.py  tides_config.json
