[tool.poetry]
name = "mitgcm-inputs"
version = "0.1.0"
description = ""
authors = ["Giorgio Bolzon <gbolzon@ogs.it>", "Stefano Piani <spiani@ogs.it>"]
readme = "README.md"
packages = [{include = "mitgcm_inputs", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
scipy = "^1.15.2"
bitsea = { git = "https://github.com/inogs/bit.sea.git", branch = "master" }
xarray = "^2025.1.2"
matplotlib = "^3.10.0"
pytmd  ="^2.2.5"
julian ="^0.14"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
deptry = "^0.21.2"


[tool.poetry.scripts]
mitgcm_inputs = "mitgcm_inputs.__main__:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
