[tool.poetry]
name = "mitgcm-inputs"
version = "0.1.0"
description = ""
authors = ["Giorgio Bolzon <gbolzon@ogs.it>", "Stefano Piani <spiani@ogs.it>"]
readme = "README.md"
packages = [{include = "mitgcm_inputs", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
scipy = "^1.15.2"
bitsea = { git = "https://github.com/inogs/bit.sea.git", branch = "master" }
xarray = "^2025.1.2"
pandas = "^2.3.0"
copernicusmarine = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
deptry = "^0.21.2"

[tool.deptry]
exclude = ["legacy_code/" ]


#[tool.deptry.per_rule_ignores]
#DEP002 = ["pydantic-provider", "jupyter", "matplotlib"]


[tool.poetry.scripts]
mitgcm_inputs = "mitgcm_inputs.__main__:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
